--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pinia": "^2.3.1",
     "uuid": "^11.0.5",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
